--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       <div class="hero-background"></div>
       <div class="socials-box">
-        <a href="" class="socials-link">
+        <a href="#" class="socials-link">
           <svg
             class="socials-icon"
             xmlns="http://www.w3.org/2000/svg"
@@ -120,7 +120,7 @@
             ></path>
           </svg>
         </a>
-        <a href="" class="socials-link">
+        <a href="#" class="socials-link">
           <svg
             class="socials-icon"
             xmlns="http://www.w3.org/2000/svg"
@@ -136,7 +136,7 @@
             ></path>
           </svg>
         </a>
-        <a href="" class="socials-link">
+        <a href="#" class="socials-link">
           <svg
             class="socials-icon"
             xmlns="http://www.w3.org/2000/svg"
@@ -151,7 +151,7 @@
             ></path>
           </svg>
         </a>
-        <a href="" class="socials-link">
+        <a href="#" class="socials-link">
           <svg
             class="socials-icon"
             xmlns="http://www.w3.org/2000/svg"
